--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "discord.js": "^14.14.1",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zlib-sync": "^0.1.9"
   },
   "devDependencies": {
     "@types/node": "^20",
