--- a/package.json
+++ b/package.json
@@ -1,30 +1,36 @@
 {
-  "name": "test-discord-bot",
-  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "start-bot": "nodemon bots/discordBot.js",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "sb": "supabase",
+    "update-types": "npx supabase gen types typescript --project-id \"fuazrjersikhwcqfujtg\" > types/supabase.ts"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.39.3",
-    "discord.js": "^14.14.1",
-    "next": "14.1.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "zlib-sync": "^0.1.9"
+    "@stripe/stripe-js": "^2.2.1",
+    "@supabase/ssr": "0.0.9",
+    "@supabase/supabase-js": "^2.38.4",
+    "autoprefixer": "10.4.15",
+    "classnames": "^2.3.2",
+    "next": "^14.0.4",
+    "notion-client": "^6.15.6",
+    "postcss": "8.4.29",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-notion-x": "^6.15.6",
+    "stripe": "^14.9.0",
+    "swr": "^2.2.4",
+    "tailwindcss": "3.3.3",
+    "typescript": "5.1.3",
+    "worker-timers": "^7.0.76"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "@types/node": "20.3.1",
+    "@types/react": "^18.2.33",
+    "@types/react-dom": "^18.2.14",
+    "encoding": "^0.1.13",
+    "supabase": "^1.99.5"
   }
 }
