--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@supabase/supabase-js": "^2.38.4",
     "autoprefixer": "10.4.15",
     "classnames": "^2.3.2",
+    "discord.js": "^14.14.1",
     "next": "^14.0.4",
     "notion-client": "^6.15.6",
     "postcss": "8.4.29",
