--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "10.4.15",
     "classnames": "^2.3.2",
     "discord.js": "^14.14.1",
+    "dotenv": "^16.3.1",
     "next": "^14.0.4",
     "notion-client": "^6.15.6",
     "postcss": "8.4.29",
@@ -32,6 +33,7 @@
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
     "encoding": "^0.1.13",
+    "nodemon": "^3.0.3",
     "supabase": "^1.99.5"
   }
 }
