--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "swr": "^2.2.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.3",
-    "worker-timers": "^7.0.76"
+    "worker-timers": "^7.0.76",
+    "zlib-sync": "^0.1.9"
   },
   "devDependencies": {
     "@types/node": "20.3.1",
